tests/positive/pr115_var_basic.safe
package pR115_Var_Basic

   type counter is range 0 to 20;

   function bump (input : counter) returns counter

      var local : counter = input
      local = input
      return local



